108: Fixed PATCH /users & completed PATCH /users/profiler.
